# bpmn-co

./: .gitignore  ARCH.md  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml
.github/instructions/: claude-instructions.instructions.md
client/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  constants.test.ts  constants.ts  globals.d.ts  types.ts  utils.test.ts
client/src/components/: BpmnCollaborativeEditor.tsx  BpmnEditor.test.tsx  BpmnEditor.tsx  CollaborationProvider.tsx  ConnectionStatusIndicator.tsx  EditorHeader.tsx  EditorSideBar.tsx  LockedElements.tsx  NameControl.tsx  UserList.tsx  Welcome.tsx  constants.ts  types.ts  utils.ts
client/src/contexts/: CollaborationProvider.tsx
client/src/hooks/: useBpmnModeler.ts  useCollaborationWebSocket.ts  useDiagramSync.ts  useWebSocket.test.ts  useWebSocket.ts
e2e/: README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/helpers/: servers.ts
e2e/tests/: smoke.spec.ts  user-flow.spec.ts
server/: .gitignore  Makefile  README.md  __init__.py  event_handlers.py  main.py  models.py  pyproject.toml
server/managers/: __init__.py  connections_manager.py  state_manager.py  util.py
server/templates/: __init__.py  approval-workflow.bpmn  blank.bpmn  constants.py  cross-functional.bpmn  loader.py  simple-process.bpmn
server/tests/: __init__.py  conftest.py  test_event_handlers.py  test_integration.py  test_models.py  test_state_manager.py  test_templates.py
(+32 files in other folders)
